--- a/RevisionVS2015/RevisionVS2015.vcxproj.filters
+++ b/RevisionVS2015/RevisionVS2015.vcxproj.filters
@@ -93,5 +93,8 @@
     <ClInclude Include="2KSports.h">
       <Filter>Algorithms</Filter>
     </ClInclude>
+    <ClInclude Include="CPlane.h">
+      <Filter>CPlusPlusAndMath</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
